--- a/index.html
+++ b/index.html
@@ -71,25 +71,25 @@
             <div class="skills-right">
                 <div><img src="Images/User Assets/blob vector.png" class="blob-style" alt="" /></div>
                 <div><img src="Images/Stack/HTML.png" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/CSS.png" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Javascript.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/React.png" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/NodeJs.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Next.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Redux.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Tailwind.png" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Bootstrap.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/MaterialUI.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Express.png" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Git.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Github.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Graphql.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/MongoDB.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Vercel.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/ChartJs.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Bash.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/Docker.svg" alt="" class="skills-logo" /></div>
-                <div><img src="Images/stack/K8s.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/CSS.png" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Javascript.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/React.png" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/NodeJs.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Next.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Redux.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Tailwind.png" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Bootstrap.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/MaterialUI.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Express.png" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Git.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Github.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Graphql.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/MongoDB.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Vercel.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/ChartJs.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Bash.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/Docker.svg" alt="" class="skills-logo" /></div>
+                <div><img src="Images/Stack/K8s.svg" alt="" class="skills-logo" /></div>
             </div>
         </div>
 
