--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
         <div class="container">
             <div class="navbar">
                 <div class="logo-container">
-                    <!-- <img src="Images/User Assets/Nav logo1.png" class="logo"> -->
                     <div class="logo-text">Mradul Gupta</div>
                 </div>
                 <div class="nav-items">
@@ -30,7 +29,7 @@
                 <div class="hero-heading">Hii! Mradul Gupta</div>
                 <div class="hero-heading hero-sub-heading">I am a <span class="role" >Web Developer</span> </div>
                 <div class="hero-description">I’m a software developer and here is my portfolio website. Here you’ll learn about my journey as a software developer.</div>
-                <div class="btn-pink" id="btn">Hire Me</div>
+                <div class="btn-pink" id="btn-top">Hire Me</div>
             </div>
 
             <div class="hero-right">
@@ -53,13 +52,14 @@
                     <img src="Images/User Assets/userimage (2).jpg" alt="">
                 </div>
 
+            
+
 
 
             </div>
         </div>
 
         <div class="skills" id="skills">
-            <!-- <div class="skills-faded-text">Skills</div> -->
 
             <div class="skills-left">
                 <div class="skills-heading"><h1>My Skills</h1></div>
